Fix ordering of the resource paths (random resources/tags resets should go now!)

Need help testing on all OS types now! This patch should fix the
random resetting of all the user resources on restarting Krita. It
happened, because Krita randomly tried to load them from the
system-wide settings instead of the local user one

Patch contents:

1) Resources fetched using QStandardPaths::locateAll() should have
   absolute priority over our own paths. That is caused by the fact
   that Qt sorts the returned resources by the usage priority, that is
   ~/.local/* will be first in the list. Whereas our resources are
   usually meant to be system-wide and not writable.

2) For the same reason we should never use QSet over the returned
   resources, since it doesn't preserve ordering

3) This patch should also fix random 'Tags' resetting when restarting
   Krita.

BUG:361971
Fixes T2418
CC:kimageshop@kde.org